--- a/.github/workflows/nodejs-hello-world.yml
+++ b/.github/workflows/nodejs-hello-world.yml
@@ -33,6 +33,5 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-     - name: Sync build to S3
-        run: |
-          aws s3 sync ./build s3://${{ secrets.S3_BUCKET_NAME }} --delete
+    - name: Sync build to S3
+        run: aws s3 sync ./build s3://${{ secrets.S3_BUCKET_NAME }} --delete
