--- a/.github/workflows/nodejs-hello-world.yml
+++ b/.github/workflows/nodejs-hello-world.yml
@@ -34,4 +34,5 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     - name: Sync build to S3
-        run: aws s3 sync ./build s3://${{ secrets.S3_BUCKET_NAME }} --delete
+        run: |
+          aws s3 sync ./build s3://${{ secrets.S3_BUCKET_NAME }} --delete
