--- a/.github/workflows/nodejs-hello-world.yml
+++ b/.github/workflows/nodejs-hello-world.yml
@@ -3,10 +3,10 @@ name: Node.js Hello World CI
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   build:
