--- a/.github/workflows/nodejs-hello-world.yml
+++ b/.github/workflows/nodejs-hello-world.yml
@@ -25,7 +25,9 @@ jobs:
       run: npm install
 
     - name: Run the app
-      run: node index.js
+      run: |
+        node index.js
+        sleep 5
     
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
