--- a/.github/workflows/nodejs-hello-world.yml
+++ b/.github/workflows/nodejs-hello-world.yml
@@ -32,8 +32,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
-
+        aws-region: eu-north-1
     - name: Sync build to S3
       run: 
         aws s3 sync ./build s3://${{ secrets.S3_BUCKET_NAME }} --delete
