--- a/.github/workflows/nodejs-hello-world.yml
+++ b/.github/workflows/nodejs-hello-world.yml
@@ -35,4 +35,4 @@ jobs:
         aws-region: ${{ vars.AWS_REGION }}
     - name: Sync build to S3
       run: 
-        aws s3 sync ./build s3://${{ secrets.S3_BUCKET_NAME }} --delete
+        aws s3 sync . s3://maazprac
