--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-hello",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -16,5 +16,6 @@
   "bugs": {
     "url": "https://github.com/johnpapa/node-hello/issues"
   },
+  "homepage": "https://github.com/johnpapa/node-hello#readme",
   "homepage": "https://github.com/johnpapa/node-hello#readme"
 }
